<?xml version="1.0" encoding="utf-8"?>
<com.zxj.music.fusion.widget.ForegroundLinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:elevation="3px"
	android:clickable="true"
	android:orientation="vertical"
	android:id="@+id/item_song"
	android:stateListAnimator="@animator/raise_activated"
	android:foreground="?android:selectableItemBackground"
	android:background="?android:attr/colorBackground"
	android:descendantFocusability="blocksDescendants">

	<RelativeLayout
		android:id="@+id/rl_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageButton
			android:id="@+id/ib_play"
			android:layout_width="@dimen/d_mini_fab"
			android:layout_height="@dimen/d_mini_fab"
			android:scaleType="centerInside"
			android:src="@drawable/ic_play"
			android:tint="?android:colorAccent"
			android:background="?android:selectableItemBackgroundBorderless"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:layout_marginRight="@dimen/spacing_xlarge"/>

		<TextView
			android:letterSpacing="0.05"
			android:ellipsize="end"
			android:id="@+id/item_song_artist"
			android:layout_toLeftOf="@id/ib_play"
			android:maxWidth="100dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="2"
			android:text="歌手"
			android:layout_centerVertical="true"
			android:layout_marginRight="@dimen/spacing_xlarge"/>

		<TextView
			android:layout_alignParentStart="true"
			android:layout_toLeftOf="@id/item_song_artist"
			android:layout_marginTop="@dimen/spacing_normal"
			android:id="@+id/item_song_title"
			android:text="标题"
			android:textSize="@dimen/tsize_normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="@dimen/spacing_normal"
			android:layout_marginLeft="@dimen/spacing_large"
			android:letterSpacing="@dimen/letter_spacing_normal"/>

		<TextView
			android:layout_toLeftOf="@id/item_song_artist"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="@dimen/spacing_normal"
			android:layout_below="@id/item_song_title"
			android:id="@+id/item_song_info"
			android:text="信息"
			android:textStyle="italic"
			android:typeface="monospace"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignLeft="@id/item_song_title"
			android:layout_marginRight="@dimen/spacing_normal"
			android:textSize="@dimen/tsize_small"
			android:letterSpacing="@dimen/letter_spacing_small"/>
		<View
			android:id="@+id/divider_1"
			android:layout_alignParentTop="true"
			android:background="?android:attr/dividerVertical"
			android:layout_height="1px"
		    android:layout_marginLeft="@dimen/spacing_large"
			android:layout_marginRight="@dimen/spacing_normal"
			android:layout_width="match_parent"/>

	</RelativeLayout>
	
	
	<RelativeLayout
		android:id="@+id/rl_dload_container"
		android:visibility="gone"
		android:layout_below="@id/rl_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<View
			android:layout_alignParentTop="true"
			android:id="@+id/divider_2"
			android:layout_below="@id/rl_container"
			android:background="?android:attr/dividerVertical"
			android:layout_height="0px"
			android:layout_marginLeft="@dimen/spacing_large"
			android:layout_marginRight="@dimen/spacing_normal"
			android:layout_width="match_parent"/>

		<Button
			android:contentDescription="sogg"
			android:letterSpacing="@dimen/letter_spacing_normal"
			android:layout_below="@id/divider_2"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/ogg"
			android:visibility="gone"
			android:id="@+id/btn_dload_ogg"
			android:layout_alignParentLeft="true"
		/>

		<Button
			android:contentDescription="s128"
			android:letterSpacing="@dimen/letter_spacing_normal"
			android:layout_below="@id/divider_2"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/s128"
			android:visibility="gone"
			android:id="@+id/btn_dload_s128"
			android:layout_toRightOf="@id/btn_dload_ogg"
		/>

		<Button
			android:contentDescription="s320"
			android:letterSpacing="@dimen/letter_spacing_normal"
			android:layout_below="@id/divider_2"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/s320"
			android:visibility="gone"
			android:layout_toRightOf="@id/btn_dload_s128"
			android:id="@+id/btn_dload_s320"
		/>
		<Button
			android:contentDescription="SQ"
			android:letterSpacing="@dimen/letter_spacing_normal"
			android:layout_below="@id/divider_2"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/SQ"
			android:visibility="gone"
			android:layout_toRightOf="@id/btn_dload_s320"
			android:id="@+id/btn_dload_sq"
		/>
		
		<Button
			
			android:letterSpacing="@dimen/letter_spacing_normal"
			android:layout_below="@id/divider_2"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/mv"
			android:visibility="gone"
			android:layout_marginRight="@dimen/spacing_large"
			android:layout_alignParentRight="true"
			android:id="@+id/btn_dload_mv"
		/>


	</RelativeLayout>
</com.zxj.music.fusion.widget.ForegroundLinearLayout>

